--- a/public/views/paciente/datos.html
+++ b/public/views/paciente/datos.html
@@ -29,8 +29,8 @@
               <input id="icon_prefix" type="text" pattern="^[0-9]{7,10}" title="Ingrese un numero de telefono/celular valido" name="telefono" placeholder="Ingrese su tel&eacute;fono"  ng-model="datos.telefono" required />
               <label class="active" for="icon_prefix">Telefono/Celular</label>
             </div>
-            <button type="submit" class="btn col s4 left btn-primary" >Enviar</button>
-            <button type="button" class="btn col s4 right btn-primary" ng-click="regresar()">Regresar</button>
+            <button type="submit" class="btn col s4 left waves-light teal" >Enviar</button>
+            <button type="button" class="btn col s4 right waves-light teal" ng-click="regresar()">Regresar</button>
         </form>
     </div>
 </div>
